# PromptQA

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature.md  learning.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  LEARNING.md  OPERATIONS.md
examples/: basic_test.yaml  factual.yaml  safety.yaml  tone_check.yaml
src/promptqa/: __init__.py  __main__.py  cli.py  config.py  evaluator.py  reporter.py  seed.py  store.py
src/promptqa/api/: app.py  models.py
src/promptqa/dashboard/templates/: base.html  index.html  run_detail.html
src/promptqa/providers/: __init__.py  anthropic.py  base.py  mock.py
tests/: test_anthropic_provider.py  test_api.py  test_cli.py  test_config.py  test_e2e.py  test_evaluator.py  test_mock_provider.py  test_providers.py  test_reporter.py  test_store.py  test_version.py
